--- a/lawyer/index.html
+++ b/lawyer/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>lawyer</title>
+  <title>Lawyer</title>
+  <link rel="icon" href="./IMG/lawyer/Stylus.png" type="image/x-icon">
   <link rel="stylesheet" href="/CSS/MainLow.css"> 
   <!-- ШРИФТЫ -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
